# llm-pipeline

./: .dockerignore  .env.example  .gitignore  GAP_TOOL_CALLING_AGENTS.md  README.md  docker-compose.yaml  hatch_build.py  pyproject.toml
.claude/: CLAUDE.md
.claude/plans/: evals-v2-variant-comparison.md  per-artifact-architecture.md  step-inputs-and-pipeline-adapters.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md
.taskmaster/tasks/: tasks.json
docs/: README.md  index.md  observability.md
docs/api/: extraction.md  index.md  llm.md  pipeline.md  prompts.md  registry.md  state.md  step.md  strategy.md  transformation.md
docs/architecture/: concepts.md  limitations.md  overview.md  patterns.md
docs/guides/: basic-pipeline.md  getting-started.md  multi-strategy.md  prompts.md
docs/prd/: pipeline-discovery-and-demo.md  pydantic-ai-migration.md
llm-pipeline-evals/: sentiment_analysis.yaml
llm-pipeline-prompts/: sentiment_analysis.yaml  summary.yaml  topic_extraction.yaml
llm_pipeline/: __init__.py  _dry_run.py  agent_builders.py  agent_registry.py  agent_tool.py  consensus.py  constants.py  context.py  discovery.py  extraction.py  inputs.py  introspection.py  naming.py  observability.py  pipeline.py  registry.py  resources.py  review.py  runtime.py  sandbox.py  state.py  step.py  strategy.py  tool.py  toolsets.py  transformation.py  types.py  validators.py  wiring.py  yaml_sync.py
llm_pipeline/artifacts/: __init__.py  base.py  blocks.py  builders.py  constants.py  enums.py  extractions.py  fields.py  pipelines.py  registration.py  reviews.py  schemas.py  steps.py  tables.py  tools.py  validation.py
llm_pipeline/cli/: __init__.py  build.py  generate.py  pull.py  push.py  stop.py
llm_pipeline/codegen/: __init__.py  api.py  builders.py  io.py  transformers.py
llm_pipeline/creator/: __init__.py  ast_modifier.py  context7.py  integrator.py  models.py  pipeline.py  prompts.py  sample_data.py  sandbox.py  schemas.py  steps.py  validators.py
llm_pipeline/cst_analysis/: __init__.py  api.py  resolver.py  visitors.py
llm_pipeline/db/: __init__.py  pipeline_visibility.py  prompt.py  step_config.py  versioning.py
llm_pipeline/demo/: __init__.py  pipeline.py  prompts.py
llm_pipeline/discovery/: __init__.py  conventions.py  entry_points.py  loading.py  manifest.py  modules.py  registries.py  resolver.py  walkers.py
llm_pipeline/evals/: __init__.py  acceptance.py  delta.py  evaluators.py  models.py  phoenix_client.py  runner.py  runtime.py  variants.py  yaml_sync.py
llm_pipeline/events/: __init__.py  emitter.py  handlers.py  models.py  types.py
llm_pipeline/graph/: __init__.py  instructions.py  nodes.py  persistence.py  pipeline.py  runtime.py  spec.py  state.py  validator.py
llm_pipeline/llm/: __init__.py  executor.py  gemini.py  provider.py  rate_limiter.py  result.py  schema.py  validation.py
llm_pipeline/model/: __init__.py  resolver.py
llm_pipeline/prompts/: __init__.py  discovery.py  loader.py  models.py  phoenix_client.py  phoenix_config.py  phoenix_validator.py  registration.py  resolver.py  service.py  utils.py  variables.py  yaml_sync.py
llm_pipeline/session/: __init__.py  readonly.py
llm_pipeline/specs/: __init__.py  base.py  blocks.py  builders.py  constants.py  enums.py  extractions.py  fields.py  issues.py  kinds.py  pipelines.py  registration.py  reviews.py  schemas.py  steps.py  tables.py  tools.py  validation.py
llm_pipeline/ui/: __init__.py  app.py  bridge.py  cli.py  deps.py
llm_pipeline/utils/: json.py  versioning.py
scripts/: build.sh  migrate_prompts_to_phoenix.py  smoke_langfuse.py  smoke_observer.py  smoke_pipeline.py
tests/: conftest.py  test_agent_builders.py  test_agent_registry_core.py  test_ast_modifier.py  test_auto_generate.py  test_consensus.py  test_demo_pipeline.py  test_discovery_strict.py  test_draft_tables.py  test_dry_run.py  test_emitter.py  test_eval_runner.py  test_eval_variants.py  test_eval_yaml_sync.py  test_evaluators.py  test_extraction_pathways.py  test_init_pipeline_db.py  test_inputs.py  test_integrator_models.py  test_introspection.py  test_llm_call_result.py  test_migrations.py  test_model_resolution.py  test_model_resolver.py  test_observability.py  test_phoenix_prompt_client.py  test_phoenix_validator.py  test_pipeline.py  test_pipeline_input_data.py  test_pipeline_run_tracking.py  test_prompt_resolver.py  test_prompts_models.py  test_raw_response.py  test_resources.py  test_schema_env_var.py  test_step_definition_inputs.py  test_step_dependency_graph.py  test_step_integrator.py  test_strategy_bindings.py  test_token_tracking.py  (+8 more)
(+2387 files in other folders)
