[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-pipeline"
dynamic = ["version"]
description = "Declarative LLM pipeline orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "pydantic-ai>=1.0.5",
    "python-dotenv>=1.0",
]

[project.scripts]
llm-pipeline = "llm_pipeline.ui.cli:main"

[project.entry-points."llm_pipeline.pipelines"]
text_analyzer = "llm_pipeline.demo:TextAnalyzerPipeline"
step_creator = "llm_pipeline.creator:StepCreatorPipeline"

[project.optional-dependencies]
creator = ["jinja2>=3.0"]
ui = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0", "python-multipart>=0.0.9"]
otel = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "httpx>=0.24",
    "pydantic-ai>=1.0.5",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["llm_pipeline"]
artifacts = ["llm_pipeline/ui/frontend/dist/**"]
exclude = [
    "llm_pipeline/ui/frontend/node_modules/**",
    "llm_pipeline/ui/frontend/src/**",
    "llm_pipeline/ui/frontend/.vite/**",
    "llm_pipeline/ui/frontend/tsconfig*",
    "llm_pipeline/ui/frontend/vite.config*",
    "llm_pipeline/ui/frontend/components.json",
    "llm_pipeline/ui/frontend/eslint*",
    "llm_pipeline/ui/frontend/.eslint*",
    "llm_pipeline/ui/frontend/.prettierrc",
    "llm_pipeline/ui/frontend/.prettierignore",
    "llm_pipeline/ui/frontend/package*.json",
    "llm_pipeline/ui/frontend/index.html",
    "llm_pipeline/ui/frontend/README.md",
    "llm_pipeline/ui/frontend/.gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--benchmark-skip"
